cmake: show/hide FABM_BASE, FABM_PREFIX when appropriate

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -136,13 +136,15 @@ if(GOTM_USE_FABM)
   find_path(FABM_BASE src/fabm.F90 DOC "Path to FABM source directory.")
   if(FABM_BASE)
     # Include FABM source files
+    mark_as_advanced(CLEAR FABM_BASE)
     set(FABM_FORCED_HOST gotm)
     add_subdirectory(${FABM_BASE}/src fabm_src)
     set(FABM_LIBRARIES fabm)
     set(FABM_INCLUDE_DIRS ${CMAKE_CURRENT_BINARY_DIR}/fabm_src/modules)
-    mark_as_advanced(FABM_PREFIX)
+    mark_as_advanced(FORCE FABM_PREFIX)
   else()
     # Use FABM_PREFIX to locate include and lib directories
+    mark_as_advanced(CLEAR FABM_PREFIX)
     find_package(FABM REQUIRED)
   endif()
   add_library(gotm_fabm
@@ -154,6 +156,8 @@ if(GOTM_USE_FABM)
   set_property(TARGET gotm_fabm PROPERTY Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/modules)
   add_definitions(-D_FABM_)
   target_link_libraries(gotm_fabm ${FABM_LIBRARIES})
+else()
+  mark_as_advanced(FORCE FABM_PREFIX FABM_BASE)
 endif(GOTM_USE_FABM)
 
 if(NOT GOTM_BUILD_LIBRARIES_ONLY)
