allow for different Albedo formulations, separated out zenith angle calculation from short wave radiation and added Cogley albedo

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -175,6 +175,7 @@ add_library(airsea OBJECT
             airsea/fairall.F90
             airsea/humidity.F90
             airsea/kondo.F90
+            airsea/solar_zenith_angle.F90
             airsea/short_wave_radiation.F90
             airsea/albedo_water.F90
            )
