cmake: use gotm folder in visual studio for all but gotm_exe

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -145,6 +145,8 @@ add_library(turbulence
 target_link_libraries(turbulence util)
 set_property(TARGET turbulence PROPERTY Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/modules)
 
+set_property(TARGET util turbulence PROPERTY FOLDER gotm)
+
 option(GOTM_USE_FABM "Include support for Framework for Aquatic Biogeochemical Models (fabm.net)" ON)
 if(GOTM_USE_FABM)
   find_path(FABM_BASE src/fabm.F90 DOC "Path to FABM source directory.")
@@ -168,6 +170,7 @@ if(GOTM_USE_FABM)
   set_property(TARGET gotm_fabm APPEND PROPERTY INCLUDE_DIRECTORIES "${FABM_INCLUDE_DIRS}")
   set_property(TARGET gotm_fabm APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${FABM_INCLUDE_DIRS}")
   set_property(TARGET gotm_fabm PROPERTY Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/modules)
+  set_property(TARGET gotm_fabm PROPERTY FOLDER gotm)
   add_definitions(-D_FABM_)
   target_link_libraries(gotm_fabm ${FABM_LIBRARIES})
 else()
@@ -234,6 +237,8 @@ add_library(gotm OBJECT
            )
 add_dependencies(gotm input output util meanflow turbulence observations airsea)
 
+set_property(TARGET input airsea observations meanflow output gotm PROPERTY FOLDER gotm)
+
 #option(GOTM_USE_ICE "Include ICE support" OFF)
 #if(GOTM_USE_ICE)
 #  add_library(ice OBJECT
@@ -249,6 +254,7 @@ if(GOTM_USE_SEAGRASS)
   set(EXTRA_SRCS ${EXTRA_SRCS} $<TARGET_OBJECTS:seagrass>)
   add_dependencies(seagrass output meanflow)
   add_dependencies(gotm seagrass)
+  set_property(TARGET seagrass PROPERTY FOLDER gotm)
 endif()
 
 option(GOTM_USE_BIO "Enable legacy biogeochemical modules" OFF)
@@ -276,6 +282,7 @@ if(GOTM_USE_BIO)
   set(EXTRA_SRCS ${EXTRA_SRCS} $<TARGET_OBJECTS:bio>)
   add_dependencies(bio util output)
   add_dependencies(gotm bio)
+  set_property(TARGET bio PROPERTY FOLDER gotm)
 endif()
 
 if(GOTM_USE_FABM)
@@ -287,6 +294,7 @@ if(GOTM_USE_FABM)
   add_dependencies(gotm_fabm_io input output gotm_fabm)
   add_dependencies(gotm gotm_fabm gotm_fabm_io)
   set_property(TARGET gotm APPEND PROPERTY INCLUDE_DIRECTORIES "${FABM_INCLUDE_DIRS}")
+  set_property(TARGET gotm_fabm_io PROPERTY FOLDER gotm)
 endif(GOTM_USE_FABM)
 
 # Build GOTM executable.
