cmake: GOTM_USE_FLEXIBLE_OUTPUT only available if GOTM_USE_FABM=ON

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,7 +45,9 @@ if(GOTM_EXTRA_OUTPUT)
   add_definitions(-DEXTRA_OUTPUT)
 endif()
 
-option(GOTM_USE_FLEXIBLE_OUTPUT "Use new output manager" ON)
+#option(GOTM_USE_FLEXIBLE_OUTPUT "Use new output manager" ON)
+include(CMakeDependentOption)
+CMAKE_DEPENDENT_OPTION(GOTM_USE_FLEXIBLE_OUTPUT "Use new output manager" ON "GOTM_USE_FABM" OFF)
 if(GOTM_USE_FLEXIBLE_OUTPUT)
   add_definitions(-D_FLEXIBLE_OUTPUT_)
 endif()
