lake: add dependency of gotm_fabm_input on observations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -307,7 +307,7 @@ if(GOTM_USE_FABM)
     add_dependencies(gotm_fabm_io output)
   endif()
   set_property(TARGET gotm_fabm_io APPEND PROPERTY INCLUDE_DIRECTORIES "${FABM_INCLUDE_DIRS}")
-  add_dependencies(gotm_fabm_io input gotm_fabm)
+  add_dependencies(gotm_fabm_io input observations gotm_fabm)
   add_dependencies(gotm gotm_fabm gotm_fabm_io)
   set_property(TARGET gotm APPEND PROPERTY INCLUDE_DIRECTORIES "${FABM_INCLUDE_DIRS}")
   set_property(TARGET gotm_fabm_io PROPERTY FOLDER gotm)
