--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,14 +13,14 @@ set(gotm_VERSION "${gotm_VERSION_MAJOR}.${gotm_VERSION_MINOR}.${gotm_VERSION_PAT
 
 set(GIT_COMMIT_ID ${gotm_VERSION})
 configure_file("${PROJECT_SOURCE_DIR}/util/compilation.F90.in" compilation.F90)
-configure_file("${PROJECT_SOURCE_DIR}/util/version.F90.in" version.F90)
+configure_file("${PROJECT_SOURCE_DIR}/util/gotm_version.F90.in" gotm_version.F90)
 option(GOTM_EMBED_VERSION "Embed GOTM version information" OFF)
 if(GOTM_EMBED_VERSION)
   add_custom_target(version
-    ${CMAKE_COMMAND} -DINFILE=${PROJECT_SOURCE_DIR}/util/version.F90.in -DOUTFILE=${CMAKE_BINARY_DIR}/version.F90 -P "${PROJECT_SOURCE_DIR}/cmake/Modules/GetGitInfo.cmake"
+    ${CMAKE_COMMAND} -DINFILE=${PROJECT_SOURCE_DIR}/util/gotm_version.F90.in -DOUTFILE=${CMAKE_BINARY_DIR}/gotm_version.F90 -P "${PROJECT_SOURCE_DIR}/cmake/Modules/GetGitInfo.cmake"
     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
     COMMENT "Retrieving description of last GOTM commit..." 
-    SOURCES ${PROJECT_SOURCE_DIR}/util/version.F90.in "${PROJECT_SOURCE_DIR}/cmake/Modules/GetGitInfo.cmake"
+    SOURCES ${PROJECT_SOURCE_DIR}/util/gotm_version.F90.in "${PROJECT_SOURCE_DIR}/cmake/Modules/GetGitInfo.cmake"
     VERBATIM
   )
   set_property(TARGET version PROPERTY FOLDER gotm)
@@ -105,7 +105,7 @@ add_library(util
             util/util.F90
             util/field_manager.F90
             ../include/cppdefs.h
-            ${CMAKE_BINARY_DIR}/version.F90
+            ${CMAKE_BINARY_DIR}/gotm_version.F90
             ${CMAKE_BINARY_DIR}/compilation.F90
            )
 set_property(TARGET util PROPERTY Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/modules)
