last fix of old gnu-make compilation (version and compiler information)

--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -13,6 +13,8 @@ DOCSRC	=  util.F90                                                           \
 
 
 MOD   = \
+${LIB}(gotm_version.o)			\
+${LIB}(compilation.o)			\
 ${LIB}(util.o)			\
 ${LIB}(time.o)			\
 ${LIB}(tridiagonal.o)		\
