starting input_manager() work - very preliminary support for reading restart.nc

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -224,6 +224,7 @@ if(NOT GOTM_BUILD_LIBRARIES_ONLY)
 
 add_library(input OBJECT
             input/input.F90
+            input/input_netcdf.F90
            )
 add_dependencies(input util)
 
