--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -225,8 +225,9 @@ if(GOTM_USE_FLEXIBLE_OUTPUT)
              )
   set_property(TARGET output_manager PROPERTY Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/modules)
   set_property(TARGET output_manager PROPERTY FOLDER gotm)
+  target_link_libraries(output_manager util)
   if(GOTM_USE_FABM)
-    target_link_libraries(output_manager util ${FABM_LIBRARIES})
+    target_link_libraries(output_manager ${FABM_LIBRARIES})
     set_property(TARGET output_manager APPEND PROPERTY INCLUDE_DIRECTORIES "${FABM_INCLUDE_DIRS}")
   endif()
 endif(GOTM_USE_FLEXIBLE_OUTPUT)
